[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cw0 = {  version = "0.10.3" }
cw2 = { version = "1.1.2" }
cw20 = { version = "1.1.2" }
cw20-base = { version = "1.1.2", features = ["library"] }
cosmwasm-std = { version = "1.5.0" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "1.2.0"
schemars = "0.8.16"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.51" }
num = "0.4.1"